# template-rest-api

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: __init__.py  auth.py  config.py  db.py  exceptions.py  logger.py  main.py  utils.py
app/v1/: __init__.py  crud.py  router.py  schemas.py
app/v1/users/: __init__.py  crud.py  endpoints.py  schemas.py
docker/: Dockerfile  compose.yaml
jenkins/: docker.Jenkinsfile  tests.Jenkinsfile
opa/: README.md  example-data.json  example-policy.rego
tests/: conftest.py  test_adapters.py  test_auth.py  test_config.py  test_crud.py  test_db.py  test_lifespan.py  test_logger.py  test_schemas.py  test_user_crud.py  test_user_endpoints.py  test_user_schemas.py  test_utils.py
